--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,6 +82,17 @@ project.ext.react = [
     enableHermes: true,  // clean and rebuild if changing
 ]
 
+project.ext.vectoricons = [
+    iconFontNames: [
+        'FontAwesome.ttf',
+        'FontAwesome5_Regular.ttf',
+        'FontAwesome5_Solid.ttf',
+        'FontAwesome5_Brands.ttf',
+        'MaterialIcons.ttf',
+        'EvilIcons.ttf'
+    ] // <-- add this line (1/2)
+]
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
